<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="15dp"
    card_view:cardCornerRadius="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="12:20"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_activate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_expandMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/dark_grey" />
                <CheckBox
                    android:id="@+id/checkbox_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat" />

                <CheckBox
                    android:id="@+id/checkbox_defer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/defer" />

                <LinearLayout
                    android:id="@+id/linearLayout_expand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup_defer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioBttn5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/radio5" />

                        <RadioButton
                            android:id="@+id/radioBttn10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio10" />

                        <RadioButton
                            android:id="@+id/radioBttn15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio15" />

                        <RadioButton
                            android:id="@+id/radioBttn30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio30" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/trash" />

                    <TextView
                        android:id="@+id/textView_properties"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/imageView_remove"
                        android:gravity="center"
                        android:text="Odkládat a opakovat" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout_expandButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>