<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="15dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="12:20"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Repeat" />

                <LinearLayout
                    android:id="@+id/linearLayout_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <RelativeLayout
                        android:id="@+id/button_dayM"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_dayM"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_dayTu"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_dayTu"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_dayW"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_dayW"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_dayTh"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_dayTh"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thursday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_dayF"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_dayF"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_daySa"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_daySa"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/button_daySu"
                        style="@style/days_button">

                        <TextView
                            android:id="@+id/text_daySu"
                            style="@style/days_buttontext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#55565F" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView_dayRepeat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="EVERY DAY" />

                        <LinearLayout
                            android:id="@+id/linearLayout_remove"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="wrap_content"
                                android:src="@drawable/trash" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:text="Delete" />
                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/buttonExpand"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/ic_arrow_drop_down_black_24dp" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:id="@+id/separator_bott"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#55565F" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>